# Makefile.am
#
# Used to generate the Makefile.

# Tell automake we are not following a standard GNU project layout.
AUTOMAKE_OPTIONS = foreign subdir-objects

# Specify a src directory
# srcdir = src

# Specify a build directory
BUILDDIR = build

# Add sub dir?
SUBDIRS = src

bin_PROGRAMS = phase_diagram_game

phase_diagram_game_SOURCES = src/phase_diagram_game.cpp
